<resources>
    <string name="app_name">Tes Kemampuan Dasar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="your_answer_is">Your Answer is:</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="answer">Answer</string>
    <string name="anonymous">Anonymous</string>
    <string name="back_button_disabled">Back button disabled</string>
    <string name="back_button_disabled_content">"Please use back button on the app display.     If there isn't any back button, it means you can't go back at current situation. "</string>
    <string name="back_to_tkd">Back to test</string>
    <string name="next">Next</string>
    <string name="channel_name">Timer</string>
    <string name="time_pointer">Time: %s</string>
    <string name="connectivity_request">Please turn on your internet connection if you want to access hint.</string>
    <string name="no_answer">No answer</string>
    <string name="allow_storage_permission">Please allow storage permission first</string>
    <string name="write_note_permission">Storage Permission Not Granted</string>
    <string name="write_note_permission_content">Please allow storage permission or empty the note</string>
    <string name="no_answer_content">The answer is still empty, please choose the answer</string>
    <string name="generate_name">Generate Name</string>
    <string name="fill_thix_box_with_your_name">Fill this box with your name</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="ready_to_take_tkd">Are you ready for the test?</string>
    <string name="why_need_permission_title">Why need permission?</string>
    <string name="why_need_permission_content">For sharing medal:     \nFirst, we need to write our medal asset to your external storage,     it needs your permission. Then, we need to read from your external     storage so we can send it, it needs your permission too.     \n\nFor saving the note:     \nWe need to write the note to your external storage,     it needs your permission.</string>
    <string name="back">Back</string>
    <string name="your_additional_note_is">Your additional note is</string>
    <string name="hint">Hint</string>
    <string name="submit">Submit</string>
    <string name="additional_note">Additional note ...</string>
    <string name="option_a">A</string>
    <string name="option_c">C</string>
    <string name="option_b">B</string>
    <string name="option_d">D</string>
    <string name="you_got_medal">You Got %s Medal!</string>
    <string name="got_medal">I got a medal on Kwiz</string>
    <string name="question_option_a">A. %s</string>
    <string name="question_option_b">B. %s</string>
    <string name="question_option_c">C. %s</string>
    <string name="question_option_d">D. %s</string>
    <string name="name_pointer">Name: %s</string>
    <string name="your_score">Your Score:</string>
    <string name="share">Share</string>
    <string name="save_notes">Save Note</string>
    <string name="save_notes_success">The note saved successfully</string>
    <string name="home">Home</string>
    <string name="name_placeholder">Name...</string>
    <string name="score_placeholder">Score...</string>
    <string name="connectivity_wifi">Wifi available</string>
    <string name="connectivity_mobile_data">Mobile data available</string>
    <string name="connectivity_nothing">No internet</string>
</resources>