<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="permissionExplanationInterface"
            type="id.ac.ui.cs.mobileprogramming.mutiarahmatun.tkd.interfaces.PermissionExplanationInterface" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentPermissionExplanation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".quiz.PermissionExplanationFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/why_need_permission_title"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:text="@string/why_need_permission_content"
            android:textAlignment="gravity"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:onClick="@{() -> permissionExplanationInterface.back()}"
            android:text="@string/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>