<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="tKDResultInterface"
            type="id.ac.ui.cs.mobileprogramming.mutiarahmatun.tkd.interfaces.TKDResultInterface" />
        <variable
            name="userView"
            type="id.ac.ui.cs.mobileprogramming.mutiarahmatun.tkd.view.UserView" />
        <variable
            name="medalView"
            type="id.ac.ui.cs.mobileprogramming.mutiarahmatun.tkd.view.MedalView" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentTKDResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".tkd.TKDResultFragment">

        <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/your_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/your_score"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@{String.valueOf(userView.poin)}"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/your_score" />

        <TextView
            android:id="@+id/medal_congratulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@{String.format(@string/you_got_medal, medalView.name)}"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score" />

        <Button
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:onClick="@{() -> tKDResultInterface.share()}"
            android:text="@string/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/medal_congratulation" />

        <Button
            android:id="@+id/save_notes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> tKDResultInterface.saveNotes()}"
            android:text="@string/save_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_button" />

        <Button
            android:id="@+id/home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> tKDResultInterface.home()}"
            android:text="@string/home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_notes_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>