<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="answerConfirmationInterface"
            type="id.ac.ui.cs.mobileprogramming.mutiarahmatun.tkd.interfaces.AnswerConfirmationInterface" />
        <variable
            name="optionsView"
            type="id.ac.ui.cs.mobileprogramming.mutiarahmatun.tkd.view.OptionsView" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragmentAnswerConfirmation"
        tools:context=".tkd.AnswerConfirmationFragment">

        <Button
            android:id="@+id/back"
            android:onClick="@{() -> answerConfirmationInterface.cancel()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/next" />

        <Button
            android:id="@+id/next"
            android:onClick="@{() -> answerConfirmationInterface.confirm()}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
<!--            app:layout_constraintTop_toBottomOf="@+id/yourNoteText" />-->

        <TextView
            android:id="@+id/yourAnswerPointer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_answer_is"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

<!--        <TextView-->
<!--            android:id="@+id/question2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="40dp"-->
<!--            android:layout_marginTop="48dp"-->
<!--            android:text="@string/your_additional_note_is"-->
<!--            android:textSize="18sp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="parent" />-->
<!--            app:layout_constraintTop_toBottomOf="@+id/yourAnswerText" />-->

<!--        <TextView-->
<!--            android:id="@+id/yourAnswerText"-->
<!--            android:text="@={optionsViewModel.getOptionChecked()}"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="40dp"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:textSize="18sp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/yourAnswerPointer" />-->

<!--        <TextView-->
<!--            android:id="@+id/yourNoteText"-->
<!--            android:text="@={noteViewModel.getNote()}"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="40dp"-->
<!--            android:layout_marginTop="32dp"-->
<!--            android:textSize="18sp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/question2" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>